<resources>
    <string name="app_name">GuildBuild</string>
    <string name="send_message">Send message</string>
    <string name="list_of_guilds">List of Guilds</string>
    <string name="profile">Profile</string>
    <string name="my_guild">My guilds</string>
    <string name="create_guild">Create guild</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_avatar">Change avatar</string>
    <string name="add_new_character">Add new character</string>
    <string name="apply_for_Guild">Apply for guild</string>
    <string name="see_guild_members">See guild members</string>
    <string name="see_active_events">See active events</string>
    <string name="leave_guild">Leave guild</string>
    <string name="send_form">Send Form</string>
    <string name="members">Members</string>
    <string name="give_up_leadership">Give up leadership</string>
    <string name="promote_demote_members">Promote/Demote members</string>
    <string name="user_requests">User requests</string>
    <string name="add_event">Add event</string>
    <string name="add_goal">Add goal</string>
    <string name="add_subgoal">Add subgoal</string>
    <string name="Events">Events</string>
    <string name="Goals">Goals</string>
    <string name="Subgoals">Subgoals</string>

</resources>
