<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.fer.amigosi.guildbuild.GuildListActivity"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/GuildNameText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="50sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/giveUpLeadershipButton"
                style="@style/button_style"
                android:layout_height="match_parent"
                android:text="@string/give_up_leadership" />

            <Button
                android:id="@+id/promote_demoteMembersButton"
                style="@style/button_style"
                android:layout_height="match_parent"
                android:text="@string/promote_demote_members" />
        </LinearLayout>

        <TextView
            android:id="@+id/GuildMembers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/members"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/guildMembers1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

        </ScrollView>


    </LinearLayout>

</android.widget.RelativeLayout>
